2011-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        assorted cleanups to prepare for side-by-side diffing
        https://bugs.webkit.org/show_bug.cgi?id=51961

        Mostly, use selector queries instead of assuming comments are next siblings.

        * code-review.js:

2011-01-05  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Adam Barth.

        fix message container selector for code review tool
        https://bugs.webkit.org/show_bug.cgi?id=51959

        * code-review.js:

2011-01-04  Ojan Vafai  <ojan@chromium.org>

        Increment version number to avoid getting the cached JS file.

        * PrettyPatch/PrettyPatch.rb:

2010-12-15  Ojan Vafai  <ojan@chromium.org>
 
        Reviewed by Adam Barth.

        anchor the toolbar to the bottom of the diff if the diff doesn't take a full screen of height
        https://bugs.webkit.org/show_bug.cgi?id=51162

        * PrettyPatch/PrettyPatch.rb:
        * code-review.js:

2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move JavaScriptCore to Source
        https://bugs.webkit.org/show_bug.cgi?id=51604

        * PrettyPatch/PrettyPatch.rb:
          - Remove reference to JavaScriptCore as a source directory.

2011-01-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Move Sources to Source
        https://bugs.webkit.org/show_bug.cgi?id=51794

        * PrettyPatch/PrettyPatch.rb:

2010-12-31  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move PageLoadTests to PerformanceTests/PageLoad
        https://bugs.webkit.org/show_bug.cgi?id=51771

        Update list of top-level open-source directories.

        * PrettyPatch/PrettyPatch.rb:

2010-12-31  Adam Barth  <abarth@webkit.org>

        Rubber-stamped by Eric Seidel.

        Move SunSpider into PerformanceTests
        https://bugs.webkit.org/show_bug.cgi?id=51769
