@@ -2,6 +2,17 @@
 
         Reviewed by Adam Barth.
 
+        minor code cleanup for code review tool
+        https://bugs.webkit.org/show_bug.cgi?id=51962
+
+        Consolidates some queries to using shared functions.
+
+        * code-review.js:
+
+2011-01-05  Ojan Vafai  <ojan@chromium.org>
+
+        Reviewed by Adam Barth.
+
         assorted cleanups to prepare for side-by-side diffing
         https://bugs.webkit.org/show_bug.cgi?id=51961
 
